ruka-lang.org/src/lib/interpreter/fixtures/type-err/let-tuple-arity.ruka
// expect: arity mismatch
let triple = () do (1, 2, 3)

let main = () do
	let (a, b) = triple()
end
